# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-common-gentoo-9999 (12 Apr 2009)

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org> -files/site-start.el,
  -emacs-common-gentoo-1.0-r20.ebuild +emacs-common-gentoo-9999.ebuild:
  Live CVS ebuild; LICENSE is GPL-3 now. Remove old.

*emacs-common-gentoo-1.0-r20 (29 Mar 2009)

  29 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +files/site-start.el,
  -emacs-common-gentoo-1.0.ebuild, +emacs-common-gentoo-1.0-r20.ebuild:
  Sync from Portage tree. Try a different approach using CONFIG_PROTECT.

  08 Mar 2009; Ulrich Mueller <ulm@gentoo.org>
  emacs-common-gentoo-1.0.ebuild:
  PDEPEND on virtual/emacs.

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org>
  emacs-common-gentoo-1.0.ebuild:
  explicitely state GNU Emacs

*emacs-common-gentoo-1.0 (07 Mar 2009)

  07 Mar 2009; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +emacs-common-gentoo-1.0.ebuild:
  Initial import, successor of x11-misc/emacs-desktop.
