@@ -1,3 +1,3 @@
-EBUILD emacs-common-gentoo-9999.ebuild 3881 RMD160 b135748be430e4cd6d437dee941d8dcdc9c6fcb9 SHA1 50ba7084d57536de27eebb7c7b8b3a45bf181022 SHA256 88a557575f0322c41f5b5a266417f4c9d3e89b262c8f8c8e23e8e04830e161df
-MISC ChangeLog 1048 RMD160 f23bba728deab9a68b7ab57283c10be13827b70e SHA1 f9c3103dff4d82aa97e50ba3882afe55e3c1b4a3 SHA256 673a6947f2ac3db8bb2b973aaf9fff6785d0130835e26c8e7f12f0aab6fbe0e0
-MISC metadata.xml 247 RMD160 f0908c9b35b3e06d209e27430c6cfd6b51cd100e SHA1 a47467d6e27a2f67a2fcb1b189b62eb234a2333a SHA256 2c0b871dcd2a27d80c50e110e48c8b7e123592413e3af738dcdd41140b1f91a8
+EBUILD emacs-common-gentoo-9999.ebuild 3893 RMD160 3b2097021be713c70a3051eceb4acf76afd07c9b SHA1 a8a22ca80935e8b5621316674357ba26d49d5d05 SHA256 6c2fb5d8196fc782210f8ec84c90659fd697ffa009384baaff108c6345007ba0
+MISC ChangeLog 1182 RMD160 e83d742ae9e15cf5c2b97774a3399d000a08c1b6 SHA1 c981d73c1cb47a4bd7e2ca9dbf1caa46bafd029b SHA256 6379bc505b6328998c08c3f6f10439a9b63442570c7c044d5a5773a3e6872c24
+MISC metadata.xml 235 RMD160 ce490aa2edb4e105063e20d4aeb7146a7d02f636 SHA1 e4c16f2e41d467b079a7f70ee0b3b2ac42799fc3 SHA256 7f2c9480b2a1dc4ac18ea5f96b0a003d5064168f1b5e17956b04eaaca5cc2774
